# python-fastapi-graphene-sqlalchemy

./: .gitignore  README.md  README.org  docker-compose.yml  pyproject.toml
docker/postgres/: 00_init.sql  Dockerfile
src/fastapi_graphene_sqlalchemy/: config.py  db.py  graphene_schema.py  main.py  schema.py
src/fastapi_graphene_sqlalchemy/static/: graphiql.html  playground.html  voyager.html
