[tool.poetry]
name = "fastapi-graphene-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = {extras = ["postgresql_psycopg2binary"], version = "^1.4.25"}
graphene = "^2.1.9"
graphene-sqlalchemy = "^2.3.0"
fastapi = "^0.70.0"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
